<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HangMan</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <string name="bsSubmitLetter">Submit Letter</string>
    <string name="bsSubmitWord">Submit Word</string>
    <string name="tvsMissed">Missed: </string>
    <string name="tvsWordLength">Word Length: </string>
    <string name="tvString"></string>
</resources>